<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_store"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/store_background"
    tools:context=".Store">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="175dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/drill"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            app:srcCompat="@drawable/drill" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <ImageView
            android:id="@+id/drill_machine"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            app:srcCompat="@drawable/drill_machine" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <ImageView
            android:id="@+id/big_drill_machine"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            app:srcCompat="@drawable/big_drill_machine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/drill_cpa"
            android:textIsSelectable="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/drill_price" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/drill_machine_cpa" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/drill_machine_price" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/big_drill_machine_cpa" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/big_drill_machine_price" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>